crates/ox_content_lsp/src/preview/snapshots/outline_offsets_account_for_frontmatter.snap
---
source: crates/ox_content_lsp/src/preview/symbols.rs
assertion_line: 130
---
h1 [4:0..5:0] After Frontmatter
